manifests/dashboard.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: ingress-dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard
  name: dashboard
  namespace: ingress-dashboard
spec:
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
       app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/reddec/ingress-dashboard:0.2.1
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      serviceAccountName: ingress-dashboard
