manifests/qa-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-qa-ingress
  namespace: vcluster-qa
spec:
  ingressClassName: nginx 
  rules:
  - host: qa.kubecon.sales-dev.codefresh.io
    http:
      paths:
      - backend:
          service:
            name: qa-vcluster
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
